# PINNs

./: .gitignore  GITHUB_SETUP.md  README.md  demo_concepts.py  push_to_github.bat  pyproject.toml  requirements.txt  tutorial.py
examples/: heat_equation_1d.py  inverse_problem.py
src/: pinn_model.py
tests/: test_core.py
utils/: pde_utils.py
