[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pinns"
version = "0.1.0"
authors = [
  { name="Pratik", email="pratik@example.com" },
]
description = "A powerful and optimized framework for Physics-Informed Neural Networks"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "scipy>=1.7.0",
]

[project.urls]
"Homepage" = "https://github.com/Shahip2016/PINNs"
"Bug Tracker" = "https://github.com/Shahip2016/PINNs/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "utils*"]
